# job_challenge

./: CMakeLists.txt  cable_type_builder.cpp  cable_type_builder.h  cable_type_crud_mock.cpp  cable_type_crud_mock.h  cable_type_suite.cpp  cable_type_suite.h  hello_test.cpp
